2014-03-31  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: O_BINARY is added to open() in reading animation gif on win32.

	* ml_vt100_parser.c: Accessing free'ed memory is fixed.

2014-03-31  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* x_screen.c:
	  - x_window_t::idling is always set and whether blink_cursor is enabled
	    or not is stored in x_screen_t::cursor_blink_wait.
	    (cursor_blink_wait == 0 => disable blinking
	     cursor_blink_wait < 0  => enable blinking (hide cursor)
	     cursor_blink_wait > 0  => enable blinking (show cursor))
	  - prev_inline_pic is added to x_screen_t.

	* ml_vt100_parser.[ch]:
	  - "add_frame" is added to OSC 5379.
	  - add_frame_to_animation event is added to ml_xterm_event_listener_t.

	* x_picture.[ch]:
	  - next_frame and anim_wait are added to x_inline_picture_t.
	  - x_add_frame_to_animation() and x_animate_inline_pictures() are added.

	* gdiplus.c:
	  - create_cardinals_from_file() supports Animation GIF.
	  - Image::GetLastStatus() is checked after Image::FromStream() or
	    Image::FromFile().

	* c_imagelib.c: gdk_pixbuf_new_from() supports Animation GIF.

2014-03-24  Araki Ken  <arakiken@users.sf.net>

	* kik_debug.c: The bug of calling vfprintf(...,NULL) is fixed.

2014-03-23  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: c_sixe.c is included instead of c_imagelib.c.

	* c_sixel.c: Separated from c_imagelib.c.

	* kik_debug.c: Whether errno is 0 or not is checked in kik_error_printf().

	* version.h.in: 3.3.4 -> 3.3.4post

2014-03-22  Araki Ken  <arakiken@users.sf.net>

	* 3.3.4 released.
	  (tag "rel-3_3_4")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.4.

2014-03-22  Araki Ken  <arakiken@users.sf.net>

	* java/MLTermPty.java: env_for_dialog is explicitly set NULL after
	  ml_term_open_pty().

	* ml_pty.h, java/Makefile.in: OPEN_PTY_ASYNC is always disabled on java/win32.
